fix: Alignment issue_3

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -46,6 +46,6 @@ nav {
 
 @media screen and (max-width: 1000px) {
   nav {
-    padding: 1.5rem !important;
+    /* padding: 1.5rem !important; */
   }
 }
